new static help pages templates

--- a/public/tools/tool_skeleton/assets/home/index.html
+++ b/public/tools/tool_skeleton/assets/home/index.html
@@ -22,7 +22,6 @@
 		<a href="tools/tool_skeleton/input.php?op=1" class="cbp-l-inline-view btn blue btn-outline">Start tool with 2 FASTA FILES</a>
 	</div>
 
-
-        <a href="tools/tool_skeleton/help/help.php" class="cbp-l-inline-view btn blue btn-outline">VIEW HELP</a>
+        <a href="help/toolhelp.php?tool=tool_skeleton&sec=help" class="cbp-l-inline-view btn blue btn-outline">VIEW HELP</a>
     </div>
 </div>
