disable 'launch tool' from workspace

--- a/public/htmlib/TreeTblworkspace/TR_file.htm
+++ b/public/htmlib/TreeTblworkspace/TR_file.htm
@@ -60,13 +60,13 @@
 			##plainText##
 		</ul>
 	</div>
-	<div class="btn-group" style="float:left; position:absolute; margin-top:-10px!important;margin-left:75px;display:##tools_button##;">
+	<!--<div class="btn-group" style="float:left; position:absolute; margin-top:-10px!important;margin-left:75px;display:##tools_button##;">
     	<button class="btn btn-xs blue-dark dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"> 
 				<i class="fa fa-wrench"></i>
 				<i class="fa fa-angle-down"></i>
 		</button>
 	 	##tools_list## 
-	</div>
+	</div>-->
 </td>
 <td>1</td>
 <td>##mtime_parent##</td>
