--- a/public/htmlib/TreeTblworkspace/TR_folder.htm
+++ b/public/htmlib/TreeTblworkspace/TR_folder.htm
@@ -1,11 +1,11 @@
 <tr data-tt-id="##tree_id##" >
-<td>
+<td class="highlighted_folder" >
 	 <label class="mt-checkbox mt-checkbox-single mt-checkbox-outline">
 		<input type="checkbox" class="checkboxes foldercheck" value="1"       name="directory" id="##_id##"/>
 		 <span></span>
 	 </label>
 </td>
-<td>
+<td class="highlighted_folder" >
 	<span class="truncate" title="##longfilename##">##longfilename## </span>     
 	<!--  span style="font-weight:bold;" search="yes"   type="execution" -->
 	<!--<span class="expand_info" onclick="expandInfo(this)"></span>-->
@@ -21,12 +21,12 @@
 	</div>
 	<a href="javascript:viewFileMeta('##_id##', '##longfilename##', 0);" style="margin-left:5px;"><i class="fa fa-info-circle"></i></a>
 </td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td title="##longfilename##"><span class="truncate">##longfilename##</span></td>
-<td title="##mtime##"><span class="truncate2" title="##mtime##">##mtime##</span></td>
-<td>##size##</td>
-<td>
+<td class="highlighted_folder" >&nbsp;</td>
+<td class="highlighted_folder" >&nbsp;</td>
+<td class="highlighted_folder"  title="##longfilename##"><span class="truncate">##longfilename##</span></td>
+<td class="highlighted_folder"  title="##mtime##"><span class="truncate2" title="##mtime##">##mtime##</span></td>
+<td class="highlighted_folder" >##size##</td>
+<td class="highlighted_folder" >
 	<div class="btn-group" style="float:left; position:absolute; margin-top:-10px!important;">
 		<button class="btn btn-xs blue-madison dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"> 
 			<i class="fa fa-cogs"></i>
@@ -50,9 +50,9 @@
 		<!--</ul>
 	</div>-->
 </td>
-<td>-1000</td>
-<td>##mtime_parent##</td>
-<td>##size_parent##</td>
+<td class="highlighted_folder" >-1000</td>
+<td class="highlighted_folder" >##mtime_parent##</td>
+<td class="highlighted_folder" >##size_parent##</td>
 </tr>
 
 
