--- a/public/htmlib/TreeTblworkspace/TR_file.htm
+++ b/public/htmlib/TreeTblworkspace/TR_file.htm
@@ -33,7 +33,7 @@
 
 <td>
 	<div class="btn-group" style="float:left; position:absolute; margin-top:-10px!important;">
-    	<button class="btn btn-xs blue-madison dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+    	<button class="btn btn-xs btn-outline dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
 				<i class="fa fa-cogs"></i>
 				<i class="fa fa-angle-down"></i>
 		</button>
