--- a/front_end/openVRE/public/htmlib/TreeTblworkspace/TR_fileInteractive.htm
+++ b/front_end/openVRE/public/htmlib/TreeTblworkspace/TR_fileInteractive.htm
@@ -22,7 +22,7 @@
   </div>
 <a href="javascript:viewFileMeta('##pid##', '##longfilename##', 2);" style="margin-left:3px;"><i class="fa fa-info-circle"></i></a>
 </td>
-<td><a href="javascript:goInteractiveTool('##pid##');"><i class="fa fa-spinner fa-pulse" style="color:#004d66;"></i> <span style="font-weight:bold;" class="job-running">##pending##</span>&nbsp; <i class="fa fa-share-square-o"></i></a></td>
+<td><a href="javascript:goInteractiveTool('##toolContainerName##');"><i class="fa fa-spinner fa-pulse" style="color:#004d66;"></i> <span style="font-weight:bold;" class="job-running">##pending##</span>&nbsp; <i class="fa fa-share-square-o"></i></a></td>
 <td></td>
 <td title="##execution##"><span class="truncate">##execution##</span></td>
 <td title="##mtime##"><span class="truncate2" title="##mtime##">##mtime##</span></td>
@@ -34,7 +34,7 @@
 				<i class="fa fa-angle-down"></i>
 		</button>
 	  <ul class="dropdown-menu pull-right" role="menu">
-			<li><a href="javascript:goInteractiveTool('##pid##');"><i class="fa fa-share-square-o"></i> Access Session </a></li>
+			<li><a href="javascript:goInteractiveTool('##toolContainerName##');"><i class="fa fa-share-square-o"></i> Access Session </a></li>
 			<li><a href="javascript:cancelJob('cancelJobSure', '##pid##');"><i class="fa fa-times-circle"></i> Stop Session </a></li>
 			<li><a href="javascript:viewProgress('##pid##', '##longfilename##', '##pending##');"><i class="fa fa-spinner fa-pulse"></i> View Progress</a></li>
 		</ul>
