feat: more generic termsofuse by default

--- a/front_end/openVRE/public/applib/termsofuse.html
+++ b/front_end/openVRE/public/applib/termsofuse.html
@@ -8,11 +8,15 @@ header('Access-Control-Allow-Origin: *');
 
 <head>
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
-    <title xml:lang="en-US">Terms of Use</title>
+    <title xml:lang="en-US">Terms of Use and Privacy Policy</title>
 
     <style type="text/css">
         @page {}
-	p { font-family: 'Open Sans', sans-serif; }
+
+        p {
+            font-family: 'Open Sans', sans-serif;
+        }
+
         table {
             border-collapse: collapse;
             border-spacing: 0;
@@ -195,46 +199,43 @@ header('Access-Control-Allow-Origin: *');
     </style>
 </head>
 
-<body dir="ltr"
-    style="padding:5%; background-color:#ffffff; ">
-    <p class="P11">Last updated: April 2020</p>
+<body dir="ltr" style="padding:5%; background-color:#ffffff; ">
+    <p class="P11">Last updated: August 2025</p>
     <p class="P3"> </p>
     <p class="P5"><span class="T4">Please read these Terms of Use ("Terms", "Terms of Use") carefully before using the
-        </span> <a href="https://vre.eucanshare.bsc.es" class="ListLabel_20_1"><span
-                class="T5">https://vre.eucanshare.bsc.es</span></a><span class="T4"> website ("euCanSHare-VRE")
-            operated by the ELIXIR-ES/INB (Spanish National Bioinformatics Institute) Hub under the direction of the euCanSHare consortium (<a href="https://eucanshare.eu" class="ListLabel_20_1">https://eucanshare.eu</a>). </span></p>
+        </span> <a href="https://bsc.es" class="ListLabel_20_1"><span class="T5">https://inb-elixir.es</span></a><span
+            class="T4"> website ("openVRE SPE")
+            operated by the ELIXIR-ES/INB (Spanish National Bioinformatics Institute) Hub under the <a href="#"
+                class="ListLabel_20_1"> YOUR PROJECT NAME</a>. </span></p>
     <p class="P4"> </p>
     <p class="P4">Your access to the use of the Service is conditioned on your acceptance of and compliance with these
         Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
     <p class="P4"> </p>
-    <p class="P3">By accessing or using the Service, you agree to be bound by these Terms. If you disagree with any part of the Terms, please refrain from accessing the Service.</p>
+    <p class="P3">By accessing or using the Service, you agree to be bound by these Terms. If you disagree with any part
+        of the Terms, please refrain from accessing the Service.</p>
     <p class="P3"> </p>
 
     <p class="P6"><a id="_a2ok2iyu1g0b" />Access to the portal</p>
 
-    <p class="P4">Access to euCanSHare-VRE and the applications hosted is free and unrestricted. Upon first access, a
-        unique URL is generated to allow recovering of the data space in later sessions.</p>
+    <p class="P4">openVRE SPE portal is based on the <a href="https://github.com/inab/openVRE">openVRE software</a>.</p>
     <p class="P4"> </p>
-    <p class="P4">Users desiring a longer interaction with euCanSHare-VRE can register to obtain a permanent workspace.
-    </p>
+    <p class="P4">Access to openVRE SPE and the applications hosted is restricted to <a
+            href="https://lifescience-ri.eu/ls-login">Life Science AAI</a> users.</p>
     <p class="P4"> </p>
-    <p class="P4">euCanSHare-VRE uses Keycloak software (https://www.keycloak.org/) to manage authentication protocols.
-    For registered users access is protected by a username and password combination, issued by this central authentication server. Alternatively, authentication might be based on existing trusted identity providers (IdPs)  conformed to the <a href="https://openid.net/connect/">OpenID Connect</a> specification,  like <a href="https://developers.google.com/identity/protocols/oauth2/openid-connect">Google</a> or <a href="https://elixir-europe.org/services/compute/aai">ELIXIR AAI</a>. Additional identity providers may be added in the future.</p>
-    <p class="P4"> </p>
-    <p class="P4">euCanSHare-VRE portal supports HTTPS access, which ensures encryption of all transferred data.
+    <p class="P4">openVRE SPE portal supports HTTPS access, which ensures encryption of all transferred data.
         Authentication protocols are applied transparently to all data transactions between the user and the Portal,
         either interactively, or through REST based APIs to assure privacy.</p>
     <p class="P4"> </p>
-    <p class="P4">euCanSHare-VRE will be available for use except in the event of hardware failure, programmed
+    <p class="P4">openVRE SPE will be available for use except in the event of hardware failure, programmed
         maintenance, or on grounds of force majeure. When known, disruptions of service will be warned in advance by
         standard means including but not limited to email, the main website and/or periodic newsletter.</p>
     <p class="P3"> </p>
     <p class="P7"><a id="_7bblc557oe9d" />Protection of personal data</p>
     <p class="P5"><span class="T4">In accordance with Organic Law 15/1999 of December 13 on Protection of Personal Data,
-            3/2018 of December 5 of Personal Data Protection and Guarantee of Digital Rights, and  General Data
+            3/2018 of December 5 of Personal Data Protection and Guarantee of Digital Rights, and General Data
             Protection Regulation 2016/679, personal data provided in the registration will be incorporated into a file
             property of the ELIXIR-ES/INB Hub Consortium, located in C/ Jordi Girona n.31, 08034 Barcelona (Spain) and
-            will be treated in a confidential way. Use of this file is restricted to the needs of euCanSHare-VRE and its
+            will be treated in a confidential way. Use of this file is restricted to the needs of openVRE SPE and its
             contents will not be shared with third parties. We remind you that at any time you may exert your rights of
             access, modification, rectification or removal, the limitation of the treatment or opposition to it, as well
             as the right to data portability by contacting ELIXIR-ES/INB Hub Coordinator at the Barcelona </span><span
@@ -243,27 +244,28 @@ header('Access-Control-Allow-Origin: *');
             class="T4">.</span></p>
     <p class="P3"> </p>
     <p class="P6"><a id="_qpgh2cel9clr" />Execution environment</p>
-    <p class="P5"><span class="T3">euCanSHare-VRE</span><span class="T4"> is running in a series of cloud
+    <p class="P5"><span class="T3">openVRE SPE</span><span class="T4"> is running in a series of cloud
             infrastructures based at ELIXIR partners premises. Physical compute clusters hosting the cloud
             infrastructures are physically protected and follows the security standards of hosting institutions. Direct
             access to the cluster are reserved to technical staff. Data transmission necessary for the internal activity
-            of euCanSHare-VRE will use in all cases secure protocols (HTTPS, SFTP, and similar).</span></p>
+            of openVRE SPE will use in all cases secure protocols (HTTPS, SFTP, and similar).</span></p>
     <p class="P4"> </p>
-    <p class="P4">Tools and workflows provided within euCanSHare-VRE are integrated and supported by their developers. Details of the available functionality and the appropriate references can be
+    <p class="P4">Tools and workflows provided within openVRE SPE are integrated and supported by their developers.
+        Details of the available functionality and the appropriate references can be
         found in the corresponding documentation section.</p>
     <p class="P3"> </p>
-    <p class="P6"><a id="_rvir4hf86rc1" />Users’ data</p>
+    <p class="P6"><a id="_rvir4hf86rc1" />User's data</p>
     <p class="P4">Our Service allows users to upload, and store information, research data, or other material, perform
-        analysis on it, and download results. Additionally, euCanSHare-VRE allows to access selected data
+        analysis on it, and download results. Additionally, openVRE SPE allows to access selected data
         repositories.</p>
     <p class="P4"> </p>
-    <p class="P4">User’s data and results obtained (since they are generated automatically without human intervention)
-        are treated as confidential and remain the intellectual property of the user.</p>
+    <p class="P4">User's data and results obtained are treated as confidential.</p>
     <p class="P4"> </p>
-    <p class="P4">User’s data is held in a private virtual workspace. Unless agreed in other terms, users’ workspace is
-        limited to 5 GB storage size, and is maintained until termination of users’ relationship with euCanSHare-VRE.
-        For unregistered users, data is held 90 days after creation. For registered users, in case of long term
-        inactivity (6 months), euCanSHare-VRE reserves the right to archive users’ data and release the used storage.
+    <p class="P4">User's data is held in a private virtual workspace. Unless agreed in other terms, user's workspace is
+        limited to 5 GB storage size, and is maintained until termination of user's relationship with openVRE SPE.
+        In case of long term inactivity (6 months), openVRE SPE reserves the right to archive user's data and release
+        the
+        used storage.
     </p>
     <p class="P4"> </p>
     <p class="P4">Data held in the workspace is only accessible by their owner, although admin operations staff may be
@@ -271,37 +273,37 @@ header('Access-Control-Allow-Origin: *');
         formalized. It is the responsibility of the user to ensure that the required agreement is in place prior to
         uploading any confidential data.</p>
     <p class="P4"> </p>
-    <p class="P4">Backup of users’ data is performed periodically following the internal policies of the hosting
-        institution. euCanSHare-VRE and/or the hosting institution cannot be held liable for data loss in users’
-        workspace. Users are advised to keep a local copy of any data uploaded and/or produced by euCanSHare-VRE.</p>
+    <p class="P4">Backup of user's data is performed periodically following the internal policies of the hosting
+        institution. openVRE SPE and/or the hosting institution cannot be held liable for data loss in user's
+        workspace. Users are advised to keep a local copy of any data uploaded and/or produced by openVRE SPE.</p>
     <p class="P3"> </p>
-    <p class="P6"><a id="_yprp6d2m1icp" />Right of Modification</p>
-    <p class="P4">euCanSHare-VRE reserves the right to make any modification in the interface, allowed quotas, available
+    <p class="P6"><a id="_yprp6d2m1icp" />Right of modification</p>
+    <p class="P4">openVRE SPE reserves the right to make any modification in the interface, allowed quotas, available
         tools, or provided data to fix possible bugs, or extend or improve the functionality. Users will be warned in
         advance about any modifications that may alter user experience. When possible, back compatibility will be
         maintained.</p>
     <p class="P3" />
     <p class="P4"> </p>
     <p class="P6"><a id="_dg5suw5cho72" />User support</p>
-    <p class="P5"><span class="T3">euCanSHare-VRE</span><span class="T4"> provides support through a HelpDesk to address
+    <p class="P5"><span class="T3">openVRE SPE</span><span class="T4"> provides support through a HelpDesk to address
             technical issues. </span></p>
     <p class="P3"> </p>
     <p class="P6"><a id="_x8qiuutmd4ab" />Tools selection and Developers support</p>
-    <p class="P4">Inclusion of new tools would require adaptation to the euCanSHare-VRE internal execution engine.
-        Detailed documentation to do so is available, and euCanSHare-VRE staff will help as necessary. Failure to
+    <p class="P4">Inclusion of new tools would require adaptation to the openVRE SPE internal execution engine.
+        Detailed documentation to do so is available, and openVRE SPE staff will help as necessary. Failure to
         perform the adaptation will preclude the inclusion of the requested software.</p>
     <p class="P3"> </p>
     <p class="P6"><a id="_p3809xbcabbi" />Licensing</p>
-    <p class="P4">Licensing information on euCanSHare-VRE components is available in the documentation section
-    (<a href="https://github.com/euCanSHare/vre">https://github.com/euCanSHare/vre</a>) .</p>
+    <p class="P4">The openVRE software used in this portal is licensed under the <a
+            href="https://www.apache.org/licenses/LICENSE-2.0">Apache-2.0 License</a>.</p>
     <p class="P3"> </p>
     <p class="P6"><a id="_mzr66jxa4x2l" />Acknowledgement</p>
-    <p class="P4">Users of euCanSHare-VRE agree in properly acknowledge the use of the infrastructure and the tools in
-        any publication, either journal’s paper or scientific conference, derived from the results obtained totally or
-        partially within the infrastructure. Appropriate acknowledge statements are available in the help section.</p>
+    <p class="P4">Users of openVRE SPE agree in properly acknowledge the use of the infrastructure and the tools in
+        any publication, either journal's paper or scientific conference, derived from the results obtained totally or
+        partially within the infrastructure.</p>
     <p class="P3"> </p>
     <p class="P6"><a id="_ce4t18jwme79" />Limitation of liability</p>
-    <p class="P5"><span class="T3">euCanSHare-VRE</span><span class="T4"> service and the tools included therein are
+    <p class="P5"><span class="T3">openVRE SPE</span><span class="T4"> service and the tools included therein are
             offered for research purposes only. ELIXIR-ES is not liable for the outcomes of any kind of decisions
             (commercial, clinical, etc.) taken as a consequence of its use.</span></p>
     <p class="P4"> </p>
@@ -318,12 +320,12 @@ header('Access-Control-Allow-Origin: *');
     <p class="P3"> </p>
     <p class="P6"><a id="_ngko5supaa1k" />Changes</p>
     <p class="P4">We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a
-        revision is material, we will try to provide at least 30 days' notice prior to any new terms taking effect. What
+        revision is material, we will try to provide at least 30 days notice prior to any new terms taking effect. What
         constitutes a material change will be determined at our sole discretion.</p>
     <p class="P3"> </p>
     <p class="P6"><a id="_86zle6cch3pr" />Contact Us</p>
     <p class="P5"><span class="T4">If you have any questions about these Terms, please contact us at </span><a
-            href="mailto:support_eucanshare@bsc.es" class="ListLabel_20_1"><span class="T5">support_eucanshare@bsc.es</span></a><span
+            href="mailto:inb.hub@bsc.es" class="ListLabel_20_1"><span class="T5">inb.hub@bsc.es</span></a><span
             class="T4">.</span></p>
     <p class="P4"> </p>
     <p class="P8"> </p>
